# buffett

./: .gitignore  CLAUDE.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: sync.yml
scripts/: pyproject.toml  test-db-connection.ts  verify-tables.ts
scripts/analysis/: backtest.py  intrinsic.py  runner.py  score.py  timing.py
scripts/sync/: compare_kis.py  corp_codes.py  db.py  dedupe_financials.py  env.py  events.py  financials.py  kospi_index.py  prices.py  probe_dart_cis.py  probe_dart_diverse.py  probe_dart_edge.py  probe_dart_extra.py  probe_dart_final.py  probe_dart_finstate.py  probe_dart_holding.py  probe_dates.py  probe_fdr.py  sector_mapping.py  seed_cycle_types.py  stocks.py  verify_extra.py  verify_financials.py  verify_prices.py  verify_schema.py  verify_stocks.py
src/app/: layout.tsx  page.tsx
src/app/decisions/: page.tsx
src/app/portfolio/: page.tsx
src/app/profile/: page.tsx
src/app/rankings/: page.tsx
src/app/whatif/: page.tsx
src/components/: backtest-chart.tsx  bulk-sell.tsx  candidate-card.tsx  decision-form.tsx  financials-chart.tsx  investment-plan.tsx  nickname-switcher.tsx  portfolio-actions.tsx  price-chart.tsx  profile-actions.tsx  rebalance-banner.tsx  recommendation-box.tsx  sell-alerts.tsx  term.tsx
src/db/: client.ts  schema.ts
src/db/migrations/: 0000_init.sql  0001_add_market_data_and_current.sql  0002_financials_unique_nulls_not_distinct.sql  0003_add_equity_attributable_to_owners.sql  (+6 more)
src/lib/: glossary.ts  nickname.ts  queries.ts  rebalance.ts  recommendation.ts
(+23 files in other folders)
