[project]
name = "buffett-sync"
version = "0.1.0"
description = "Korea stock data collection (DART, FDR, KRX) for buffett project"
requires-python = ">=3.14"
dependencies = [
    "opendartreader",
    "finance-datareader",
    "pykrx",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-dotenv",
    "pandas>=2.2",
    "requests",
    # pykrx가 deprecated pkg_resources를 import하므로 명시 필요 (Py3.12+ 미번들).
    # setuptools 81+ 에서 pkg_resources 제거됨 → 80 이하로 핀.
    "setuptools<81",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"
